Fix spacing

--- a/style.css
+++ b/style.css
@@ -20,8 +20,7 @@ body{
 
 /* content */
 .content{
-    width: 20vw;
-    height: 10vh;
+    width: 30rem;
     display: flex;
     flex-direction: column;
     align-items: center;
